# python-training-2022-01-21

./: .gitignore  README.md
githubrepos/: Dockerfile  github_repos.py
hellosamples/: Makefile  README.md  flake8-report.txt  setup.cfg  sonar-project.properties
hellosamples/src/hellosamples/: __main__.py  hello.py  hello_controller.py
hellosamples/tests/: test_hello.py
pythontutorial/: pythontutorial.ipynb
seleniumtutorial/: HelloWorld.ipynb  requirements.txt
