[metadata]
name = hellosamples
version = 0.0.1
author = Istvan Viczian
description = hellosamples demo package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vicziani/jtechlog-python
project_urls =
    Bug Tracker = https://github.com/vicziani/jtechlog-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest
    coverage
    pytest-cov
    pylint
    flake8
    mypy
    twine
    pdoc